# ScrollZ

./: .gitignore  COPYRIGHT  ChangeLog  ChangeLog.ScrollZ  ChangeLog.ircii  INSTALL  Makefile.in  NEWS  README  README.ScrollZ  SZdist.c  ScrollZ.addon  ScrollZ.help  ScrollZ.new  acconfig.h  aclocal.m4  bsdinstall  configure  configure.in  easyinst  ircbug.in  mkinstalldirs  regbin.c  scrollz.1  scrollz.1.in  todo  ver.c
debian/: changelog  control  copyright  docs  rules
doc/: INSTALL.ScrollZ  ScrollZ.doc
help/: !  :  abort  about  addbk  addchan  addf  addfchan  addfflag  addmon  addn  adds  addw  admin  ajoin  arejoin  arinwin  assign  autocompl  autoinv  autoopdelay  away  awayencr  awaysave  awayt  ban  bantime  bantype  basics  beep  bitch  bk  bki  bklist  bkt  bye  c  cat  cd  cdban  (+265 more)
help/alias/: alias  functions  quote  special  szvar  width
help/bind/: accept_last_chat  backspace  backward_character  backward_history  backward_word  beginning_of_line  bind  clear_screen  command_completion  delete_character  delete_next_word  delete_previous_word  end_of_line  enter_digraph  enter_menu  erase_line  erase_to_beg_of_line  erase_to_end_of_line  examples  forward_character  forward_history  forward_word  help_character  insert_autoreply  insert_tabkey_next  insert_tabkey_prev  keys  lastjoiner_kick  meta1_character  meta2_character  meta3_character  meta4_character  meta5_character  meta6_character  meta7_character  meta8_character  next_window  nothing  parse_command  previous_window  (+20 more)
help/cdcc/: autoget  chan  close  dldir  doffer  fsend  get  idle  limit  list  load  longst  notice  ntime  offer  overwr  plist  psend  ptime  queue  renpack  request  resend  save  secure  send  stats  status  uldir  verbose  warning
help/ctcp/: action  clientinfo  ctcp  echo  finger  ping  time  userinfo  utc  version
help/dcc/: chat  close  dcc  get  list  raw  rename  send
help/note/: antiwall  count  deny  find  flag  key  log  ls  news  note  rm  save  send  sent  service  spy  stats  user  waitfor  wall  wallops
help/on/: action  cdcc_plist  cdcc_plist_footer  cdcc_plist_header  channel_nick  channel_signoff  channel_synch  channel_wallop  connect  ctcp  ctcp_reply  dcc_chat  dcc_list  dcc_list_footer  dcc_list_header  dcc_raw  disconnect  exec  exec_errors  exec_exit  exec_prompt  flood  help  hook  icb_error  icb_status  idle  input  invite  join  join_me  leave  list  mail  mode  msg  msg_group  names  nickname  note  (+32 more)
help/scrollz/: copyright
help/set/: always_split_biggest  auto_reconnect  auto_reconnect_channels  auto_unmark_away  auto_whowas  away_file  background_colour  beep  beep_max  beep_on_mail  beep_on_msg  beep_when_away  bold_video  chanlog_strip_ansi  channel_name_width  client_information  clock  clock_24hour  clock_alarm  cmdchars  colour  command_mode  continued_line  ctcp_reply_backlog_seconds  ctcp_reply_flood_size  ctcp_reply_ignore_seconds  dcc_block_size  dcc_host  dcc_ports  debug  decrypt_program  default_protocol  display  display_ansi  display_encoding  eight_bit_characters  encrypt_pad_msgs  encrypt_pad_public  encrypt_program  exec_protection  (+125 more)
help/window/: add  addgroup  back  balance  bind  channel  create  delete  delgroup  double  goto  grow  hide  hide_others  hold_mode  kill  kill_others  lastlog_level  level  list  log  logfile  move  name  new  next  nostatus  notify  notify_level  number  pop  previous  prompt  push  query  refnum  remove  scroll  server  show  (+9 more)
include/: Makefile.in  alias.h  blowfish.h  buffer.h  cast_sbox.h  cdcc.h  celerity.h  config.h  count.c  crypt.h  ctcp.h  dcc.h  debug.h  defs.h.in  dh1080.h  edit.h  exec.h  fish.h  flood.h  funny.h  help.h  history.h  hold.h  hook.h  hook.h.proto  if.h  ignore.h  input.h  irc.h  irc_std.h  ircaux.h  ircterm.h  keys.h  keys.h.proto  lastlog.h  list.h  log.h  mail.h  menu.h  myssl.h  (+25 more)
source/: Makefile.in  alias.c  blowfish.c  cast.c  cdcc.c  celerity.c  crypt.c  ctcp.c  dcc.c  debug.c  dh1080.c  digraph.inc  edit.c  edit2.c  edit3.c  edit4.c  edit5.c  edit6.c  exec.c  file.c  files.c  fish.c  flood.c  funny.c  help.c  history.c  hold.c  hook.c  if.c  ignore.c  input.c  irc.c  ircaux.c  ircflush.c  ircio.c  ircsig.c  keys.c  lastlog.c  list.c  log.c  (+30 more)
tools/: README  SZdecode.c  SZsetup.c  SZsetup.h  xSZsetup
translation/: ASCII  CP437  CP850  DANISH  DEC_MCS  DG_MCS  DUTCH  FINNISH  FRENCH  FRENCH_CANADIAN  GERMAN  HP_MCS  IRV  ITALIAN  JIS  MACINTOSH  NEXT  NORWEGIAN_1  NORWEGIAN_2  POLISH  POLISH_NOPL  PORTUGUESE  PORTUGUESE_COM  RUSSIAN  RUSSIAN_ALT  RUSSIAN_WIN  SPANISH  SWEDISH  SWEDISH_NAMES  SWEDISH_NAMES_COM  SWISS  UNITED_KINGDOM  UNITED_KINGDOM_COM
